--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,14 @@ server.port=8082
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=muradabbaszade6@gmail.com
-spring.mail.password=
+spring.mail.password=olufcluzvvxtcgjo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.servlet.multipart.max-file-size=30MB
-spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+spring.datasource.url=jdbc:mysql://localhost:3306/rfch
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
