--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,22 @@ repositories {
 }
 
 dependencies{
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.7.4'
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.15.Final'
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.2'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.5'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.7.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.7.3'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.22'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.7.3'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.3'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.2'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.22'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.3'
+    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.7.2'
 }
