--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies{
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.22'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.3'
-    /*implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.2'
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.2'
     implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.7.2'
-    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.2'*/
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.2'
 }
