--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
 }
 
+
 group 'world.rfch'
 version '1.0'
 
@@ -15,7 +16,7 @@ dependencies{
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '1.2.0.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.7.4'
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.15.Final'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     implementation 'mysql:mysql-connector-java:8.0.15'
